// Vitest Snapshot v1

exports[`SearchInput component > renders 1`] = `
<div>
  <div
    class="c-PJLV c-PJLV-icmpvrW-css"
  >
    <input
      class="c-fZTBsJ c-fZTBsJ-pHZal-size-md c-cNcGUX c-cNcGUX-icRYcAH-css"
      type="search"
      value=""
    />
    <svg
      aria-hidden="true"
      class="c-dbrbZt c-dbrbZt-hemXWm-size-md c-hvMhuR c-hvMhuR-OveXb-size-md c-hvMhuR-ihFPSGE-css"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.412 14.412L20 20"
      />
      <circle
        cx="10"
        cy="10"
        r="6"
      />
    </svg>
  </div>
</div>
`;

exports[`SearchInput component > renders clear button 1`] = `
<div>
  <div
    class="c-PJLV c-PJLV-icmpvrW-css"
  >
    <input
      class="c-fZTBsJ c-fZTBsJ-pHZal-size-md c-cNcGUX c-cNcGUX-icRYcAH-css"
      type="search"
      value="testing"
    />
    <button
      aria-label="Clear"
      class="c-fDzwZw c-fDzwZw-PrXKS-size-lg c-fDzwZw-otpKd-cv c-fDzwZw-ialwQu-css"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="c-dbrbZt c-dbrbZt-hemXWm-size-md c-dbrbZt-ihFPSGE-css"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.343 6.343l11.314 11.314m-11.314 0L17.657 6.343"
        />
      </svg>
    </button>
  </div>
</div>
`;
